Fixing layout bug with the signin/signout bars

--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -111,3 +111,6 @@ fieldset.positioning_tree, a#header_login_button, #tree_editor
       a
         color: black
         font-weight: bold
+
+#search
+  float: left
